# ResourceLoader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: GlslangRAII.hpp  MeshData.hpp  Resource.hpp  ResourcePreprocessor.hpp  ShaderData.h  TextureData.h
src/: GlslangRAII.cpp  ResourcePreprocessor.cpp
